--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "model/oandapy"]
 	path = model/oandapy
-	url = git@github.com:oanda/oandapy.git
+	url = git://github.com/oanda/oandapy.git
